# soda-maze

./: .gitignore  Cargo.toml  README.md
bench/: Cargo.toml
bench/src/: main.rs
docs/: spec.md
docs/resources/: add_leaf.drawio  arch.drawio  commit.drawio  deposit.drawio  leaf_existance.drawio  withdraw.drawio
keys/: Cargo.toml
keys/src/: lib.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/circuits/: circuits.rs  commit.rs  deposit.rs  encryption.rs  jubjub.rs  merkle.rs  mod.rs  uint64.rs  withdraw.rs
lib/src/circuits/biguint/: mod.rs
lib/src/circuits/encryption/: mod.rs  rabin.rs  uint.rs
lib/src/circuits/hasher/: mimc.rs  mod.rs
lib/src/circuits/jubjub/: mod.rs  point.rs
lib/src/circuits/rabin/: encrypt.rs  mod.rs  poly.rs  uint.rs
lib/src/params/: mod.rs
lib/src/params/poseidon/: commitment.rs  leaf.rs  merkle.rs  mod.rs  nullifier.rs
lib/src/proof/: scheme.rs
lib/src/vanilla/: biguint.rs  commit.rs  deposit.rs  encryption.rs  jubjub.rs  merkle.rs  mod.rs  proof.rs  rabin.rs  withdraw.rs
lib/src/vanilla/encryption/: mod.rs  rabin.rs
lib/src/vanilla/hasher/: mimc.rs  mod.rs  poseidon.rs
lib/src/vanilla/rabin/: encrypt.rs  mod.rs
maze-bench/: Cargo.toml
maze-bench/src/: main.rs
maze-bin/: Cargo.toml
maze-lib/: Cargo.toml
maze-lib/src/circuits/: circuits.rs  merkle.rs  mod.rs  uint64.rs
maze-lib/src/circuits/hasher/: mod.rs  poseidon.rs
maze-lib/src/circuits/rabin/: array.rs  array2.rs  encrypt.rs  mod.rs  poly.rs  uint.rs  uint126.rs  uint2.rs
maze-lib/src/proof/: scheme.rs
maze-lib/src/vanilla/: merkle.rs  mod.rs  proof.rs  rabin.rs
maze-lib/src/vanilla/hasher/: mod.rs  poseidon.rs
program/: Cargo.toml
program/src/: _processor.rs  context.rs  entrypoint.rs  error.rs  gadget.rs  instruction.rs  invoke.rs  lib.rs  mock.rs  processor.rs  processor1.rs  state.rs
program/src/bn/: mod.rs
program/src/bn/ec/: g1.rs  g2.rs  group.rs  mod.rs
program/src/bn/ff/: arithmetic.rs  macros.rs  mod.rs
program/src/bn/ff/integer/: arithmetic.rs  macros.rs  mod.rs
program/src/bn/ff/model/: cubic.rs  fp12.rs  fp2.rs  fp6.rs  mod.rs  quad.rs
program/src/core/: commitment.rs  credential.rs  deposit.rs  mod.rs  node.rs  nullifier.rs  utxo.rs  vault.rs  withdraw.rs
program/src/hasher/: poseidon.rs
program/src/key/: deposit.rs  mod.rs
program/src/params/: default_nodes.rs  fq2.rs  fq6.rs  mod.rs  rabin.rs  root.rs
program/src/params/bn/: fq.rs  fq12.rs  fr.rs  mod.rs  model.rs
program/src/params/hasher/: blank.rs  bn254_x3_3.rs  bn254_x5_2.rs  bn254_x5_4.rs  commitment.rs  leaf.rs  merkle.rs  mod.rs  nullifier.rs
program/src/params/proof/: mod.rs  pvk_deposit.rs  pvk_withdraw.rs
program/src/params/verify/: mod.rs  pvk_deposit.rs  pvk_withdraw.rs
program/src/params/vk/: mod.rs  pvk.rs
program/src/store/: mod.rs  utxo.rs
program/src/vanilla/: commitment.rs  credential.rs  deposit.rs  merkle.rs  mod.rs  node.rs  nullifier.rs  pool.rs  vanilla.rs  withdraw.rs
program/src/vanilla/deposit/: mod.rs  processor.rs  stage.rs
program/src/verifier/: context.rs  final_exponent.rs  fsm.rs  key.rs  miller_loop.rs  mod.rs  prepare_inputs.rs  processor.rs  program.rs  state.rs  store.rs  vanilla.rs
program/src/verifier/fsm/: fsm.rs  mod.rs  processor.rs  state.rs
program/src/verifier/mock/: final_exponent.rs  fsm.rs  miller_loop.rs  mod.rs  prepare_input.rs  prepare_inputs.rs  program.rs
program/src/verifier/params/: fq.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs  model.rs
program/src/vk/: deposit.rs  mod.rs  withdraw.rs
src/: lib.rs  proof.rs
src/circuits/: circuits.rs  hasher.rs  merkle.rs  mod.rs  poseidon.rs  uint64.rs
src/circuits/merkle/: mod.rs  proof.rs
src/primitives/: array.rs  hasher.rs  merkle.rs  mod.rs  poseidon.rs
src/proof/: mod.rs  scheme.rs
src/vanilla/: array.rs  mod.rs  proof.rs
src/vanilla/hasher/: mod.rs
tools/gen-params/: Cargo.toml
tools/gen-params/src/: main.rs
tools/keys/: Cargo.toml
types/: Cargo.toml
types/src/: keys.rs  lib.rs  params.rs  parser.rs
utils/: Cargo.toml
utils/src/: convert.rs  lib.rs  params.rs  parser.rs  rand.rs
wasm/: Cargo.toml  tree.txt
wasm/ark-std-0.3.0/: .cargo_vcs_info.json  Cargo.toml
wasm/pkg/: package.json  soda_maze_wasm.d.ts  soda_maze_wasm.js  soda_maze_wasm_bg.wasm  soda_maze_wasm_bg.wasm.d.ts
wasm/rand_core-0.6.3/: Cargo.toml
wasm/resources/: pk-withdraw  rabin-param.json  vk-deposit
wasm/solana-address-lookup-table-program-1.11.7/: .cargo_vcs_info.json  Cargo.toml
wasm/solana-address-lookup-table-program-1.11.7/src/: lib.rs
wasm/src/: deposit.rs  lib.rs  params.rs  utils.rs  withdraw.rs
