[package]
name = "soda-maze-keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soda-maze-program = { path = "../program", features = ["no-entrypoint"] }
borsh = "0.9.3"
borsh-derive = "0.9.3"
ark-ff = { version = "0.3.0", optional = true }
ark-bn254 = { version = "0.3.0", optional = true }
ark-groth16 = { version = "0.3.0", optional = true }

[features]
default = ["ark-groth16/std", "ark-ff/default", "ark-bn254/default"]
std = ["ark-groth16/std", "ark-ff/std", "ark-bn254/std"]
parallel = ["ark-groth16/parallel", "ark-ff/parallel"]