[package]
name = "soda-maze-keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soda-maze-program = { path = "../program", features = ["no-entrypoint"] }
borsh = "0.9.3"
borsh-derive = "0.9.3"
ark-ff = "0.3.0"
ark-bn254 = "0.3.0"
ark-groth16 = { version = "0.3.0", default-features = false }

[features]
default = ["ark-groth16/parallel"]