[package]
name = "soda-maze-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
ark-r1cs-std = { version = "0.3.1", optional = true }
arkworks-gadgets = { version = "0.4.20", optional = true }
arkworks-utils = { version = "0.4.20", optional = true }
ark-ff = { version = "0.3.0", optional = true }
ark-relations = { version = "0.3.0", optional = true }
ark-ec = { version = "0.3.0", optional = true }
ark-std = { version = "0.3.0", optional = true }
ark-crypto-primitives = { version = "0.3.0", optional = true }
bitvec = "1.0.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.14"
num-bigint-dig = { version = "0.8.1", features = ["prime"] }
lazy_static = "1.4.0"

[dev-dependencies]
ark-bn254 = "0.3.0"
rand_core = { version = "0.6.3", features = ["std"] }

[features]
default = [
    "ark-r1cs-std/default",
    "arkworks-gadgets/default",
    "arkworks-utils/default",
    "ark-ff/default",
    "ark-relations/default",
    "ark-ec/default",
    "ark-std/default",
    "ark-crypto-primitives/default",
]
std = [
    "ark-r1cs-std/std",
    "arkworks-gadgets/std",
    "arkworks-utils/std",
    "ark-ff/std",
    "ark-relations/std",
    "ark-ec/std",
    "ark-std/std",
    "ark-crypto-primitives/std",
]
parallel = [
    "ark-r1cs-std/parallel",
    "arkworks-gadgets/parallel",
    "arkworks-utils/parallel",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-std/parallel",
    "ark-crypto-primitives/parallel",
]