[package]
name = "maze-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soda-maze-lib = { path = "../maze-lib" }
structopt = { version = "0.3", default-features = false }
arkworks-utils = "0.4.20"
ark-std = "0.3.0"
ark-bn254 = { version = "0.3.0", optional = true }
ark-bls12-381 = { version = "0.3.0", optional = true }
ark-groth16 = { version = "0.3.0", optional = true }
ark-serialize = "0.3.0"
rand_xorshift = "0.3.0"
rand_core = { version = "0.6.3", features = ["std"] }
hex = "0.4.3"
solana-program = "1.10.3"

[features]
default = ["bn254", "groth16", "poseidon"]
bn254 = ["ark-bn254"]
bls12-381 = ["ark-bls12-381"]
groth16 = ["ark-groth16"]
poseidon = []