[package]
name = "soda-maze-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
ark-r1cs-std = "0.3.1"
arkworks-gadgets = "0.4.20"
arkworks-utils = "0.4.20"
ark-ff = "0.3.0"
ark-relations = "0.3.0"
ark-ec = "0.3.0"
ark-std = "0.3.0"
# ark-groth16 = "0.3.0"
ark-crypto-primitives = "0.3.0"
bitvec = "1.0.0"
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
ark-bn254 = "0.3.0"
criterion = "0.3.5"

[features]
default = ["bn254"]
bn254 = []

