[package]
name = "soda-maze-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.3"
borsh-derive = "0.9.3"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
solana-program = "1.11.7"
spl-token = { version = "3.5.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
rand_core = { version = "0.6.3", features = ["std"] }
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-bn254 = "0.3.0"
base64 = "0.13.0"
bincode = "1.3.3"
serde_json = "1.0.83"
solana-program-test = "1.11.7"
solana-sdk = "1.11.7"
solana-client = "1.11.7"
solana-transaction-status = "1.11.7"
solana-address-lookup-table-program = "1.11.7"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []