[package]
name = "soda-maze-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
rand_core = { path = "./rand_core-0.6.3" }
ark-std = { path = "./ark-std-0.3.0" }

[dependencies]
borsh = "0.9.3"
ark-ff = "0.3.0"
ark-std = "0.3.0"
ark-bn254 = { version = "0.3.0", features = ["std"] }
ark-groth16 = { version = "0.3.0", features = ["std"] }
num-bigint = "0.4.3"
num-bigint-dig = { version = "0.8.1", features = ["prime"] }
rand_core = { version = "0.6.3", features = ["std"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.71"
solana-program = "1.10.20"
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
js-sys = "0.3.53"
rust-embed = "6.4.0"
console_error_panic_hook = "0.1.6"
soda-maze-lib = { path = "../lib" }
soda-maze-program = { path = "../program", features = ["no-entrypoint"] }
soda-maze-keys = { path = "../keys" }

[dev-dependencies]
wasm-bindgen-test = "0.3.26"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
