[package]
name = "soda-maze-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
rand_core = { path = "./rand_core-0.6.3" }

[dependencies]
aes = "0.8.1"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-bn254 = "0.3.0"
ark-ed-on-bn254 = "0.3.0"
ark-groth16 = { version = "0.3.0", default-features = false }
borsh = "0.9.3"
rand_core = { version = "0.6.3", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
solana-program = "1.11.7"
solana-sdk = "1.11.7"
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
js-sys = "0.3.53"
rust-embed = "6.4.0"
console_error_panic_hook = "0.1.6"
soda-maze-lib = { path = "../lib" }
soda-maze-program = { path = "../program", features = ["no-entrypoint"] }
soda-maze-types = { path = "../types" }

[dev-dependencies]
wasm-bindgen-test = "0.3.26"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
