[package]
name = "soda-maze-gen-params"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soda-maze-lib = { path = "../../lib" }
structopt = { version = "0.3", default-features = false }
arkworks-utils = "0.4.20"
ark-std = "0.3.0"
ark-ec = "0.3.0"
ark-bn254 = { version = "0.3.0", optional = true }
ark-bls12-381 = { version = "0.3.0", optional = true }
ark-groth16 = { version = "0.3.0", optional = true }
ark-serialize = "0.3.0"
ark-crypto-primitives = "0.3.0"
rand_xorshift = "0.3.0"
rand_core = { version = "0.6.3", features = ["std"] }
num-bigint = "0.4.3"
num-bigint-dig = { version = "0.8.1", features = ["prime"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.71"

[features]
default = ["bn254", "groth16", "poseidon"]
bn254 = ["ark-bn254"]
bls12-381 = ["ark-bls12-381"]
groth16 = ["ark-groth16"]
poseidon = []
